syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.vmware.corfukv";
option java_outer_classname = "CorfuKVProto";


package corfukv;

service KeyValue {
    rpc Get(GetRequest) returns (GetReply) {}
    rpc Set(SetRequest) returns (SetReply) {}
}

message GetRequest {
    string  key = 1;
}
message GetReply {
    string key = 1;
    string value = 2;
}
message SetRequest {
    string key = 1;
    string value = 2;
}
message SetReply {
    bool ok = 1;
}